feat: substitui botões por links para o formulário de contato e atualiza o ID do formulário de contato

--- a/src/components/0 - Header/Header.astro
+++ b/src/components/0 - Header/Header.astro
@@ -39,7 +39,7 @@ const links = [
 
   <div aria-hidden="true"></div>
 
-  <button class="cta-button custom-font">
+  <a class="cta-button custom-font" href="#contact-form">
     FALE COM UM ESPECIALISTA
     <Image
       src={iconeSeta}
@@ -48,5 +48,5 @@ const links = [
       height={20}
       class="cta-icon"
     />
-  </button>
+  </a>
 </header>
