--- a/src/components/1 - Hero/Hero.astro
+++ b/src/components/1 - Hero/Hero.astro
@@ -26,7 +26,7 @@ import iconeSeta from '../../assets/images/elements/SVG/SETA-BRANCA-BOTAO.svg'
       A CoreFibra conecta empresas do Centro-Oeste com links de alta
       performance, suporte humano e presença local.
     </p>
-    <a href="#contato" class="hero-section__cta custom-font">
+    <a href="#contact-form" class="hero-section__cta custom-font">
       <span>SOLICITE UMA PROPOSTA PERSONALIZADA</span>
       <Image
         src={iconeSeta}
