--- a/src/components/2 - Conectividade/Conectividade.astro
+++ b/src/components/2 - Conectividade/Conectividade.astro
@@ -85,9 +85,9 @@ const descricoes = [
       </div>
     </div>
 
-    <button class="conectividade-section__cta-button">
+    <a class="conectividade-section__cta-button" href="#contact-form">
       FALE COM UM ESPECIALISTA
       <Image src={iconeSetaBranca} alt="Ícone de seta" class="arrow-icon" />
-    </button>
+    </a>
   </div>
 </section>
