--- a/src/components/3 - Planos/Planos.astro
+++ b/src/components/3 - Planos/Planos.astro
@@ -68,9 +68,9 @@ const planos = [
     <p class="planos-section__description">
       Escolha o melhor plano para sua empresa.
     </p>
-    <button class="planos-section__cta-button">
+    <a class="planos-section__cta-button" href="#contact-form">
       SOLICITE UMA PROPOSTA PERSONALIZADA
       <Image src={iconeSetaBranca} alt="Ícone de seta" class="arrow-icon" />
-    </button>
+    </a>
   </div>
 </section>
