--- a/src/components/4 - Conexao/Conexao.astro
+++ b/src/components/4 - Conexao/Conexao.astro
@@ -57,10 +57,10 @@ import Infraestrutura3 from '../../assets/images/infraestrutura/Infraestrutura  
       </div>
     </div>
     <div class="conexao-section__botao">
-      <button class="cta-button__conexao custom-font">
+      <a href="#contact-form" class="cta-button__conexao custom-font">
         FALE COM UM ESPECIALISTA
         <Image src={iconeSeta} alt="Ícone de seta" class="cta-icon" />
-      </button>
+      </a>
     </div>
   </div>
   <Image src={textura} alt="Textura" class="cta-texture" />
