--- a/src/components/6 - Rodape/Rodape.css
+++ b/src/components/6 - Rodape/Rodape.css
@@ -96,11 +96,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 0.3s ease;
+  transition: transform 0.3s ease;
 }
 
 .rodape-section__social-link:hover {
-  background-color: var(--color-green-hover);
+  transform: translateY(-5px);
 }
 
 .rodape-section__social-icon {
