Adicionada funcionalidade de abrir whatsapp

--- a/src/components/6 - Rodape/Rodape.astro
+++ b/src/components/6 - Rodape/Rodape.astro
@@ -40,7 +40,12 @@ import iconeLinkedin from '../../assets/images/elements/SVG/LINKEDIN.svg'
             class="rodape-section__social-icon instagram-icon"
           />
         </a>
-        <a href="#" class="rodape-section__social-link">
+        <a
+          href="#"
+          class="rodape-section__social-link"
+          href="https://wa.me/556596457936"
+          target="_blank"
+        >
           <Image
             src={iconeWhatsapp}
             alt="WhatsApp"
