--- a/src/components/1 - Hero/Hero.css
+++ b/src/components/1 - Hero/Hero.css
@@ -202,6 +202,10 @@
 
 /* Celulares (abaixo de 576px) */
 @media (max-width: 598px) {
+  .hero-section__content {
+    width: 80%; /* Ocupa toda a largura */
+  }
+
   .hero-section {
     padding: 8% 6%;
   }
@@ -214,12 +218,12 @@
     font-size: 1.1rem;
   }
   .hero-section__cta {
-    font-size: 1rem;
-    padding: 8px 20px;
+    font-size: 0.85rem;
+    padding: 8px 15px;
     gap: 10px;
   }
   .hero-section__cta-icon {
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 1rem;
+    height: 1rem;
   }
 }
