--- a/src/components/3 - Planos/Planos.astro
+++ b/src/components/3 - Planos/Planos.astro
@@ -38,7 +38,7 @@ const planos = [
         Especialista em infraestrutura e negócios, a CoreFibra garante conexão
         robusta, escalável e sob medida para cada operação.
       </p>
-      <p class="planos-section__description--white">
+      <p class="planos-section__description--white" id="planos">
         Do diagnóstico à ativação e expansão, oferecemos acompanhamento próximo
         e especializado.
       </p>
