--- a/src/components/4 - Conexao/Conexao.astro
+++ b/src/components/4 - Conexao/Conexao.astro
@@ -10,7 +10,7 @@ import Infraestrutura3 from '../../assets/images/infraestrutura/Infraestrutura  
 
 <section class="conexao-section">
   <div class="conexao-section__texto">
-    <h2 class="conexao-section__titulo">
+    <h2 class="conexao-section__titulo" id="sobre">
       MAIS QUE INTERNET.<br /> CONEXÃO DE VERDADE.
     </h2>
     <p class="conexao-section__descricao">
