Adicionada funcionalidade nos links do rodapé

--- a/src/components/6 - Rodape/Rodape.astro
+++ b/src/components/6 - Rodape/Rodape.astro
@@ -17,10 +17,10 @@ import iconeLinkedin from '../../assets/images/elements/SVG/LINKEDIN.svg'
 
     <div class="rodape-section__center">
       <nav class="rodape-section__nav">
-        <a href="#home" class="rodape-section__link">Home</a>
-        <a href="#servicos" class="rodape-section__link">Serviços</a>
+        <a href="#" class="rodape-section__link">Home</a>
+        <a href="#planos" class="rodape-section__link">Serviços</a>
         <a href="#sobre" class="rodape-section__link">Sobre</a>
-        <a href="#contato" class="rodape-section__link">Contato</a>
+        <a href="#contact-form" class="rodape-section__link">Contato</a>
       </nav>
     </div>
 
