feat: reorganiza ícones sociais no rodapé e ajusta estilos responsivos

--- a/src/components/6 - Rodape/Rodape.astro
+++ b/src/components/6 - Rodape/Rodape.astro
@@ -30,16 +30,10 @@ import iconeLinkedin from '../../assets/images/elements/SVG/LINKEDIN.svg'
           <Image
             src={iconeLinkedin}
             alt="LinkedIn"
-            class="rodape-section__social-icon"
+            class="rodape-section__social-icon linkedin-icon"
           />
         </a>
-        <a href="#" class="rodape-section__social-link">
-          <Image
-            src={iconeInstagram}
-            alt="Instagram"
-            class="rodape-section__social-icon instagram-icon"
-          />
-        </a>
+
         <a
           class="rodape-section__social-link"
           href="https://wa.me/556596457936"
@@ -49,6 +43,13 @@ import iconeLinkedin from '../../assets/images/elements/SVG/LINKEDIN.svg'
             src={iconeWhatsapp}
             alt="WhatsApp"
             class="rodape-section__social-icon"
+          />
+        </a>
+        <a href="#" class="rodape-section__social-link">
+          <Image
+            src={iconeInstagram}
+            alt="Instagram"
+            class="rodape-section__social-icon instagram-icon"
           />
         </a>
       </div>
