--- a/src/components/6 - Rodape/Rodape.css
+++ b/src/components/6 - Rodape/Rodape.css
@@ -112,6 +112,11 @@
   width: 65px !important;
   height: 65px !important;
   margin-left: -7px !important;
+  display: none !important;
+}
+
+.linkedin-icon {
+  display: none !important;
 }
 
 /* ------------------------- */
@@ -237,8 +242,8 @@
   }
 
   .rodape-section__social-icon {
-    width: 18px;
-    height: 18px;
+    width: 50px;
+    height: 50px;
   }
 
   .rodape-section__logo {
