--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 // Importa CSS global com Tailwind
 import '../styles.css'
+import WhatsAppFloat from '../components/WhatsAppFloat/WhatsAppFloat.astro'
 ---
 
 <!doctype html>
@@ -24,6 +25,7 @@ import '../styles.css'
   </head>
   <body class="bg-base-100 text-neutral">
     <slot />
+    <WhatsAppFloat />
   </body>
 </html>
 
