--- a/src/components/5 - Contato/Contato.astro
+++ b/src/components/5 - Contato/Contato.astro
@@ -41,6 +41,12 @@ import setas from '../../assets/images/elements/WebP/Ativo 12@0.75x.webp'
         method="POST"
         class="gente-formulario"
       >
+        <input
+          type="hidden"
+          name="_next"
+          value="https://core-fibra.vercel.app/obrigado"
+        />
+        <input type="hidden" name="_captcha" value="false" />
         <input type="text" name="nome" placeholder="Nome" required />
         <div class="gente-formulario__duplo">
           <input type="text" name="empresa" placeholder="Empresa" required />
