feat: adiciona ícone de conectividade com o símbolo da Core Fibra na seção de agradecimento

--- a/src/components/7 - Obrigado/Obrigado.astro
+++ b/src/components/7 - Obrigado/Obrigado.astro
@@ -2,7 +2,7 @@
 import './Obrigado.css'
 import { Image } from 'astro:assets'
 import logoHeader from '../../assets/images/elements/SVG/LOGO-COREFIBRA-CABECALHO.svg'
-import iconeConectividade from '../../assets/images/elements/SVG/Icon-conectividade.svg'
+import iconeCoreFibra from '../../assets/images/elements/SVG/simbolo-core-fibra.svg'
 import setaBranca from '../../assets/images/elements/SVG/SETA-BRANCA-BOTAO.svg'
 ---
 
@@ -20,7 +20,7 @@ import setaBranca from '../../assets/images/elements/SVG/SETA-BRANCA-BOTAO.svg'
       <div class="obrigado-section__main">
         <div class="obrigado-section__icon-container">
           <Image
-            src={iconeConectividade}
+            src={iconeCoreFibra}
             alt="Ícone de sucesso"
             class="obrigado-section__icon"
           />
