--- a/src/components/5 - Contato/Contato.astro
+++ b/src/components/5 - Contato/Contato.astro
@@ -41,7 +41,7 @@ import setas from '../../assets/images/elements/WebP/Ativo 12@0.75x.webp'
         method="POST"
         class="gente-formulario"
       >
-        <input type="hidden" name="_next" value="/obrigado" />
+        <input type="hidden" name="_next" value="corefibra.com/obrigado" />
         <input type="hidden" name="_captcha" value="false" />
         <input type="text" name="nome" placeholder="Nome" required />
         <div class="gente-formulario__duplo">
